--- a/05-infer/04-lesson/05-04-lesson.Rmd
+++ b/05-infer/04-lesson/05-04-lesson.Rmd
@@ -18,6 +18,7 @@ library(gapminder)
 library(infer)
 library(emo)
 
+
 # knitr options ----------------------------------------------------------------
 
 knitr::opts_chunk$set(fig.align = "center", 
@@ -41,6 +42,16 @@ gss2016 <- read_rds("data/gss-sampled-2016.rds") %>%
   )) %>% 
   filter(party != "Oth") %>%
   droplevels()
+
+get_first <- function(x) {
+  x %>%
+    # Convert the numbers to strings
+    as.character() %>%
+    # Extract the first digit
+    substr(1, 1) %>%
+    # Make it a categorical variable, with levels from 1 to 9 
+    factor(levels = 1:9)
+}
 ```
 
 ## Comparing many parameters: goodness of fit
@@ -147,14 +158,6 @@ The `iran` data set contains *all* of the votes cast in this election, meaning t
 Along the way, you'll use a very useful function called `gather()`. This allows you to reshape your dataframe by taking information stored in variable names and moving it to live in its own column.
 
 
-```{r message=FALSE}
-get_first <- function(x) {
-    substr(as.character(x), 1, 1) %>%
-      as.numeric() %>%
-      as.factor()
-}
-```
-
 - Using the `iran` data, compute the total votes for each candidate by `summarize()`ing each of the candidate count columns with their sum. Name each new column with the name of the candidate.
 - Print `totals` to your screen.
 
@@ -196,7 +199,7 @@ totals
 - Inspect the resulting data frame to understand its structure.
 
 
-```{r ex2, exercise=TRUE}
+```{r tut0504ex2, exercise=TRUE}
 # From previous step
 totals <- iran %>%
   summarize(ahmadinejad = sum(ahmadinejad),
@@ -212,11 +215,11 @@ gathered_totals <- totals %>%
 gathered_totals
 ```
 
-```{r ex2-hint}
+```{r tut0504ex2-hint}
 Set `key = "candidate"` and `value = "votes"`.
 ```
 
-```{r ex2-solution}
+```{r tut0504ex2-solution}
 # From previous step
 totals <- iran %>%
   summarize(ahmadinejad = sum(ahmadinejad),
@@ -291,7 +294,7 @@ Did Ahmadinejad win throughout the country, or were there provinces where the se
 
 
 
-```{r message=FALSE, warning=FALSE}
+```{r get_first_setup, message=FALSE, warning=FALSE}
 get_first <- function(x) {
   x %>%
     # Convert the numbers to strings
@@ -359,20 +362,8 @@ Once you create a new variable containing only the first digit, you can get a se
 - Construct a bar plot to visualize the distribution of the first digit.
 
 
-```{r message=FALSE}
-get_first <- function(x) {
-  x %>%
-    # Convert the numbers to strings
-    as.character() %>%
-    # Extract the first digit
-    substr(1, 1) %>%
-    # Make it a categorical variable, with levels from 1 to 9 
-    factor(levels = 1:9)
-}
-```
 
-
-```{r ex5, exercise=TRUE}
+```{r ex5, exercise=TRUE, exercise.setup="get_first_setup"}
 # Print get_first
 get_first
 
@@ -739,24 +730,15 @@ In this exercise, you'll use simulation to build up the null distribution of the
 - Construct a null distribution with 500 samples of the `Chisq` statistic via simulation under the `point` null hypothesis that the vector of proportions `p` is `p_benford`. Save the resulting statistics as `null`.
 
 
-```{r message=FALSE, warning=FALSE}
+```{r p_benford_setup, message=FALSE, warning=FALSE}
 p_benford <- 1:9 %>% setNames(log10(1 + 1 / .), .)
-get_first <- function(x) {
-  x %>%
-    # Convert the numbers to strings
-    as.character() %>%
-    # Extract the first digit
-    substr(1, 1) %>%
-    # Make it a categorical variable, with levels from 1 to 9 
-    factor(levels = 1:9)
-}
 
 iran <- iran %>%
   mutate(first_digit = get_first(total_votes_cast))
 ```
 
 
-```{r ex6, exercise=TRUE}
+```{r ex6, exercise=TRUE, exercise.setup="p_benford_setup"}
 # Inspect p_benford
 p_benford
 
@@ -814,7 +796,7 @@ You've seen before how there are usually two ways to get to the null distributio
 In this exercise you'll compare these two approaches to calculate a p-value that measures the consistency of the distribution of the Iran first digits with Benford's Law. Note that the observed statistic that you created in the last exercise is saved in your work space as `chi_obs_stat`.
 
 
-```{r message=FALSE, warning=FALSE}
+```{r ex7_setup, message=FALSE, warning=FALSE}
 set.seed(123)
 
 p_benford <- 1:9 %>% setNames(log10(1 + 1 / .), .)
@@ -851,7 +833,7 @@ chi_obs_stat <- chisq.test(tab, p = p_benford)$stat
 
 
 
-```{r ex7, exercise=TRUE}
+```{r ex7, exercise=TRUE, exercise.setup="ex7_setup"}
 # Compute degrees of freedom
 degrees_of_freedom <- ___ %>%
   # Pull out first_digit vector
@@ -900,7 +882,7 @@ ggplot(null, aes(x = stat)) +
 
 
 
-```{r ex8, exercise=TRUE}
+```{r ex8, exercise=TRUE, exercise.setup="ex7_setup"}
 # From previous step
 degrees_of_freedom <- iran %>% 
   pull(first_digit) %>% 
@@ -1068,19 +1050,6 @@ There are different levels at which we could consider looking at vote totals. We
 For this analysis, look at totals at the *county* level in Iowa and focus on the votes for the two major party candidates: Republicans Trump / Pence and Democrats Clinton / Kaine.
 
 
-```{r message=FALSE}
-get_first <- function(x) {
-  x %>%
-    # Convert the numbers to strings
-    as.character() %>%
-    # Extract the first digit
-    substr(1, 1) %>%
-    # Make it a categorical variable, with levels from 1 to 9 
-    factor(levels = 1:9)
-}
-```
-
-
 
 
 Using the `iowa` data set, filter the rows so they contain only the two main party candidates, then group based on `county` and add up the votes to create a new column called `dem_rep_votes`. Save the resulting data frame to `iowa_county`.
@@ -1221,7 +1190,7 @@ You probably noticed that the bar plot of first digits is alarming: it looks qui
 This is a prime example of when a hypothesis test is handy. It can tell you if the structure that you see (in this case, the deviation from Benford's Law) could just be due to the random variability of your small sample, or if it's indicative of a systematic difference.
 
 
-```{r message=FALSE}
+```{r iowa_setup, message=FALSE}
 p_benford <- 1:9 %>% setNames(log10(1 + 1 / .), .)
 get_first <- function(x) {
   x %>%
@@ -1248,7 +1217,7 @@ Starting with `iowa_county`, compute the observed chi-squared statistic using `c
 
 
 
-```{r ex12, exercise=TRUE}
+```{r ex12, exercise=TRUE, exercise.setup="iowa_setup"}
 # Compute observed stat
 chi_obs_stat <- ___ %>%
   ___
@@ -1271,7 +1240,7 @@ chi_obs_stat <- iowa_county %>%
 Form the null distribution of chi-squared statistics via simulation under the point null hypothesis that these data come from the probabilities specified by Benford's Law. Save this distribution to `null`.
 
 
-```{r ex13, exercise=TRUE}
+```{r ex13, exercise=TRUE, exercise.setup="iowa_setup"}
 # Form null distribution
 null <- ___
   # Specify response
@@ -1309,7 +1278,7 @@ null <- iowa_county %>%
 Construct a density plot of the distribution of the `null` statistics and add a vertical line indicating the location of the `chi_obs_stat`.
 
 
-```{r ex14, exercise=TRUE}
+```{r ex14, exercise=TRUE, exercise.setup="iowa_setup"}
 # From previous steps
 chi_obs_stat <- iowa_county %>%
   chisq_stat(response = first_digit, p = p_benford)
@@ -1367,7 +1336,7 @@ question("Based on the null distribution that you constructed in the last exerci
 
 
 
-```{r message=FALSE, warning=FALSE}
+```{r iowa_setup2, message=FALSE, warning=FALSE}
 p_benford <- 1:9 %>% setNames(log10(1 + 1 / .), .)
 get_first <- function(x) {
   x %>%
@@ -1595,7 +1564,6 @@ knitr::include_graphics("images/4-4-15.png")
 
 
 The final step is to simply assess the distribution of these null statistics and see if the statistic that you actually observed is consistent or inconsistent with it.
-
 
 
 ## Congratulations!
