--- a/06-model-infer/01-lesson/06-01-lesson.Rmd
+++ b/06-model-infer/01-lesson/06-01-lesson.Rmd
@@ -18,6 +18,7 @@ library(infer)
 library(mosaicData)
 library(emo)
 
+
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 starbucks <- read_delim("data/starbucks.txt", 
@@ -287,7 +288,7 @@ tidy(ride_lm)
 Now, you will dive in to understanding how linear models vary from sample to sample.  Here two random samples from a population are plotted onto the scatterplot.  The population data (called `popdata`) already exists and is pre-loaded, along with `ggplot` and **dplyr**.
 
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r popdata_setup, echo=FALSE, message=FALSE, warning=FALSE}
 set.seed(4747)
 explanatory <- rnorm(1000, 0, 5)
 response <- 40 + explanatory*2 + rnorm(1000,0,10)
@@ -304,7 +305,7 @@ popdata <- data.frame(explanatory,response)
 
 
 
-```{r ex11, exercise=TRUE}
+```{r ex11, exercise=TRUE, exercise.setup="popdata_setup"}
 # Using popdata, plot response vs. explanatory
 ggplot(___, aes(x = ___, y = ___)) + 
   # Add a point layer
@@ -340,7 +341,7 @@ ggplot(popdata, aes(x = explanatory, y = response)) +
 - Combine each random sample using `bind_rows()`. Pass it `sample1` and `sample2`, and set `.id` to `"replicate"`.
 
 
-```{r ex12, exercise=TRUE}
+```{r ex12, exercise=TRUE, exercise.setup="popdata_setup"}
 # Set the random number generator seed for reproducibility
 set.seed(4747)
 
@@ -385,7 +386,7 @@ glimpse(both_samples)
     - Add a point layer.
     - Add a smooth trend layer using linear regression, without a standard error ribbon.
 
-```{r ex13, exercise=TRUE}
+```{r ex13, exercise=TRUE, exercise.setup="popdata_setup"}
 # From previous step
 set.seed(4747)
 both_samples <- bind_rows(
@@ -441,20 +442,10 @@ Rather than repeatedly calling `sample_n()`, like you did in the previous exerci
 The function `do()` from **dplyr** will allow you to run the `lm` call separately for each level of a variable that has been `group_by`'ed.  Here, the group variable is the sampling replicate, so each `lm` is run on a different random sample of the data.
 
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 5)
-response <- 40 + explanatory*2 + rnorm(1000,0,10)
-popdata <- data.frame(explanatory, response)
-```
-
-
-
-
 - Pipe `popdata` to `rep_sample_n()`, setting the `size` of each sample to `50`, and generating `100` reps.
 
 
-```{r ex14, exercise=TRUE}
+```{r ex14, exercise=TRUE, exercise.setup="popdata_setup"}
 # Set the seed for reproducibility
 set.seed(4747)
 
@@ -491,7 +482,7 @@ glimpse(many_samples)
     - Add a point layer.
     - Add a smooth trend layer using linear regression, without a standard error ribbon.
 
-```{r ex15, exercise=TRUE}
+```{r ex15, exercise=TRUE, exercise.setup="popdata_setup"}
 # From previous step
 set.seed(4747)
 many_samples <- popdata %>% rep_sample_n(size = 50, reps = 100)
@@ -534,7 +525,7 @@ ggplot(many_samples, aes(x = explanatory, y = response, group = replicate)) +
 
 
 
-```{r ex16, exercise=TRUE}
+```{r ex16, exercise=TRUE, exercise.setup="popdata_setup"}
 # From previous step
 set.seed(4747)
 many_samples <- popdata %>% rep_sample_n(size = 50, reps = 100)
@@ -586,7 +577,7 @@ many_lms
 
 
 
-```{r ex17, exercise=TRUE}
+```{r ex17, exercise=TRUE, exercise.setup="popdata_setup"}
 # From previous steps
 set.seed(4747)
 many_samples <- popdata %>% rep_sample_n(size = 50, reps = 100)
@@ -822,19 +813,13 @@ Next, you will work with a hypothetical population. The population will change i
 
 In order to understand the sampling distribution associated with the slope coefficient, it is valuable to visualize the impact changes in the sample and population have on the slope coefficient.  Here, changing the sample size directly impacts how variable the slope is.
 
-```{r echo=FALSE}
-set.seed(4747)
-explanatory <- rnorm(1000, 0, 5)
-response <- 40 + explanatory*2 + rnorm(1000,0,10)
-popdata <- data.frame(explanatory,response)
-```
 
 - From `popdata`, take random samples of `size` `50`, replicated `100` times.
 - Using `many_samples`, plot `response` vs. `explanatory`, `group`ed by `replicate`.
   - Add a point layer.
   - Add a smooth trend layer using linear regression, without a standard error ribbon.
 
-```{r ex17-s, exercise=TRUE}
+```{r ex17-s, exercise=TRUE, exercise.setup="popdata_setup"}
 set.seed(4747)
 
 # Generate 100 random samples of size 50
@@ -879,7 +864,7 @@ ggplot(many_samples, aes(x = explanatory, y = response, group = replicate)) +
 Edit the code for many samples to reduce the `size` from `50` to `10`.
 
 
-```{r ex18, exercise=TRUE}
+```{r ex18, exercise=TRUE, exercise.setup="popdata_setup"}
 set.seed(4747)
 
 # Edit the code to take samples of size 10
@@ -926,7 +911,7 @@ In order to understand the sampling distribution associated with the slope coeff
 
 
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r ex19_setup, echo=FALSE, message=FALSE, warning=FALSE}
 set.seed(4747)
 explanatory <- rnorm(1000, 0, 5)
 response <- 40 + explanatory*2 + rnorm(1000,0,10)
@@ -947,7 +932,7 @@ new_popdata <- data.frame(explanatory,response)
 ```
 
 
-```{r ex19, exercise=TRUE}
+```{r ex19, exercise=TRUE, exercise.setup="ex19_setup"}
 # Update the sampling to use new_popdata
 many_samples <- popdata %>%
   rep_sample_n(size = 50, reps = 100)
@@ -992,7 +977,7 @@ In order to understand the sampling distribution associated with the slope coeff
 
 
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+```{r ex110_setup, echo=FALSE, message=FALSE, warning=FALSE}
 set.seed(4747)
 explanatory <- rnorm(1000, 0, 5)
 response <- 40 + explanatory*2 + rnorm(1000,0,10)
@@ -1012,7 +997,7 @@ even_newer_popdata <- data.frame(explanatory,response)
 ```
 
 
-```{r ex110, exercise=TRUE}
+```{r ex110, exercise=TRUE, exercise.setup="ex110_setup"}
 # Update the sampling to use even_newer_popdata
 many_samples <- popdata %>%
   rep_sample_n(size = 50, reps = 100)
@@ -1053,27 +1038,23 @@ ggplot(many_samples, aes(x = explanatory, y = response, group = replicate)) +
 
 
 
-The last three exercises have demonstrated how the variability in the slope coefficient can change based on changes to the population and the sample.  Which of the following combinations *increases* the variability in the sampling distribution of the slope coefficient?
 
 
-```{r 111, exercise=TRUE}
-
+```{r quiz_1}
+quiz(
+  question("The last three exercises have demonstrated how the variability in the slope coefficient can change based on changes to the population and the sample.  Which of the following combinations *increases* the variability in the sampling distribution of the slope coefficient?",
+           correct = "More variability in the response and less variability in the explanatory variable *both* increase the variability of the slope coefficient.", 
+           allow_retry = TRUE,
+    answer("Bigger sample size, larger variability around the line, increased range of explanatory variable.", message = "Recall the more variability in the response and less variability in the explanatory variable *both* increase the variability of the slope coefficient."),
+    answer("Smaller sample size, larger variability around the line, decreased range of explanatory variable.", correct=TRUE),
+    answer("Bigger sample size, larger variability around the line, decreased range of explanatory variable.", message = "Recall the more variability in the response and less variability in the explanatory variable *both* increase the variability of the slope coefficient."),
+    answer("Smaller sample size, smaller variability around the line, increased range of explanatory variable.", message = "Recall the more variability in the response and less variability in the explanatory variable *both* increase the variability of the slope coefficient."),
+    answer("Smaller sample size, smaller variability around the line, decreased range of explanatory variable.", message = "Recall the more variability in the response and less variability in the explanatory variable *both* increase the variability of the slope coefficient.")
+  ), caption = ""
+)
 ```
 
 
-
-```{r 111-hint}
-Recall the more variability in the response and less variability in the explanatory variable *both* increase the variability of the slope coefficient.
-```
-
-
-```{r 111-solution}
-- Bigger sample size, larger variability around the line, increased range of explanatory variable.
-- Bigger sample size, larger variability around the line, decreased range of explanatory variable.
-- Smaller sample size, smaller variability around the line, increased range of explanatory variable.
-- Smaller sample size, larger variability around the line, decreased range of explanatory variable.
-- Smaller sample size, smaller variability around the line, decreased range of explanatory variable.
-```
 
 
 ## Congratulations!
